# gpt-realtime-agents

./: .env.sample  Dockerfile  README.md  azure.yaml  pyproject.toml  session_config.json
audio_backend/: Dockerfile  backend.py  backend_acs.py  requirements.txt
audio_backend/acs/: helpers.py  rtmt.py
audio_backend/acs/bridges/: base.py  gpt_realtime_bridge.py  voice_live_bridge.py
audio_backend/common/: config.py
audio_backend/services/: browser_session_service.py
audio_frontend_dev/: audio.html  model_prompt.txt
frontend/: .spark-initial-sha  PRD.md  README.md  index.html  package-lock.json  package.json  runtime.config.json
frontend/public/: audio-processor.js  session_config.json
frontend/src/: App.tsx  index.css  prd.md
frontend/src/components/: CallControls.tsx  ChatComposer.tsx  ContextPanel.tsx  MessageBubble.tsx  SimpleVoiceIndicator.tsx  SuggestionCards.tsx  VoiceActivityIndicator.tsx  WaveformVisualizer.tsx
frontend/src/hooks/: use-realtime-session.ts  use-voice-activity.ts
frontend/src/hooks/realtime/connections/: VoiceLiveConnection.ts  WebRTCConnection.ts  WebSocketDirectConnection.ts
frontend/src/hooks/realtime/core/: RealtimeSessionBase.ts  audioUtils.ts  messageHandler.ts  sessionManager.ts
frontend/src/lib/: constants.ts  types.ts
infra/: main.bicep  main.parameters.json
infra/app/: audio-backend.bicep
prompts/: system_prompt.txt
