[project]
name = "gpt-realtime-agents"
version = "0.1.0"
description = "Runtime dependencies for GPT Realtime Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "openai[realtime]",
    "azure-identity>=1.17.1",
    "ipykernel",
    "aiohttp",
    "fastapi",
    "httpx",
    "python-dotenv",
    "uvicorn[standard]",
    "rich",
    "azure-eventgrid==4.20.0",
    "azure-communication-callautomation==1.4.0b1",
    "aiohttp==3.11.10",
    "azure-ai-voicelive>=1.1.0",
    "aiortc",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
